force-app/main/default/objects/Service_Reminder_Calling__c/Service_Reminder_Calling__c.object-meta.xml
<CustomObject>
    <label>Service Reminder Calling</label>
    <nameField>
        <displayFormat>SRC-{00000}</displayFormat>
        <label>SRC No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Reminder Calling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>