force-app/main/default/objects/Service_Reminder_Calling__c/fields/Asset_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Asset_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Milestone</label>
    <referenceTo>AssetMilestone</referenceTo>
    <relationshipLabel>Service Reminder Calling</relationshipLabel>
    <relationshipName>Service_Reminder_Calling</relationshipName>
    <type>Lookup</type>
</CustomField>