force-app/main/default/objects/Service_Reminder_Calling__c/fields/Job_Card__c.field-meta.xml
<CustomField>
    <fullName>Job_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Card</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Service Reminder Calling</relationshipLabel>
    <relationshipName>Service_Reminder_Calling</relationshipName>
    <type>Lookup</type>
</CustomField>