force-app/main/default/objects/Service_Reminder_Calling__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Reminder Calling</relationshipLabel>
    <relationshipName>Service_Reminder_Calling</relationshipName>
    <type>Lookup</type>
</CustomField>