force-app/main/default/objects/Service_Reminder_Calling__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unable to Connect</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Appointment Booked</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>