force-app/main/default/objects/Service_Reminder_Calling__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Back Requested</fullName>
            </value>
            <value>
                <fullName>Call Disconnected</fullName>
            </value>
            <value>
                <fullName>Out of Reach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>