force-app/main/default/objects/Service_Reminder_Calling__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle</referenceTo>
    <relationshipLabel>Service Reminder Calling</relationshipLabel>
    <relationshipName>Service_Reminder_Calling</relationshipName>
    <type>Lookup</type>
</CustomField>